--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,8 @@
 # main links
 main:
-  - title: Overview
+  - title: Home
+  - url: /index.html
   children:
-    - title: "Home"
-      url: /index.html
     - title: "About"
        url: /about.html
     # - title: "Sample Posts"
