--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - url: /index.html
   children:
     - title: "About"
-       url: /about.html
+    - url: /about.html
     # - title: "Sample Posts"
     #   url: /year-archive/
     # - title: "Sample Collections"
