--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@
 locale                   : "en"
 title                    : "Robotics Knowledgebase"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : #"Your Name"
 description              : "The Wiki for Robot Builders."
 url                      : https://smbryan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : smbryan/smbryan.github.io# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-breadcrumbs              : true, false (default)
+breadcrumbs              : true #false (default)
 words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
