--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,11 @@
 # main links
 main:
   - title: Overview
+  - url: /
+
+
+docs:
+  - title: Overview
     children:
       - title: "Home"
         url: /
