--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: Overview
+  - title: Home
   - url: /
   - title: About
   - url: /about.html
@@ -9,4 +9,8 @@ docs:
   - title: Overview
     children:
       - title: "Home"
-        url: /
+      - url: /
+  - title: System Design & Development
+    children:
+      - title: System Engineering
+      - url: /SystemDesignDevelopment/SystemEngineering.html
