--- a/_config.yml
+++ b/_config.yml
@@ -245,3 +245,10 @@ defaults:
       comments: # true
       share: true
       related: true
+
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
