--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -44,10 +44,8 @@ docs:
   - title: Sensing
     url: /sensing/
     children:
-      - title: Sensors
-        children:
-        - title: Adafruit GPS
-          url: /sensing/sensors/adafruit-gps/
+      - title: Adafruit GPS
+        url: /sensing/adafruit-gps/
       - title: AprilTags
         url: /sensing/apriltags/
       - title: Camera Calibration
