--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title_separator          : "-"
 name                     : #"Your Name"
 description              : "The Wiki for Robot Builders."
 url                      : https://roboticsknowledgebase.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : roboticsknowledgebase/roboticsknowledgebase.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+baseurl                  : /wiki/# the subpath of your site, e.g. "/blog"
+repository               : roboticsknowledgebase/wiki # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true #false (default)
 words_per_minute         : 200
