--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Robotics Knowledgebase"
 title_separator          : "-"
 name                     : #"Your Name"
 description              : "The Wiki for Robot Builders."
-url                      : https://roboticsknowledgebase.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : /wiki # the subpath of your site, e.g. "/blog"
+url                      : https://roboticsknowledgebase.github.io/wiki # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : roboticsknowledgebase/wiki # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true #false (default)
