--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : #"Your Name"
 description              : "The Wiki for Robot Builders."
 url                      : http://roboticsknowledgebase.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : roboticsknowledgebase/roboticsknowledgebase.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "roboticsknowledgebase/roboticsknowledgebase.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true #false (default)
 words_per_minute         : 200
@@ -172,14 +172,14 @@ sass:
 
 
 # Outputting
-permalink: /:categories/:title/
+permalink: /:path/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
