--- a/_config.yml
+++ b/_config.yml
@@ -172,7 +172,7 @@ sass:
 
 
 # Outputting
-permalink: /:path/:title/
+permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
