--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Robotics Knowledgebase"
 title_separator          : "-"
 name                     : #"Your Name"
 description              : "The Wiki for Robot Builders."
-url                      : http://roboticsknowledgebase.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://roboticsknowledgebase.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "roboticsknowledgebase/roboticsknowledgebase.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
