--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,6 +30,8 @@ wiki:
         url: /wiki/project-management/product-development-complex-systems/
       - title: Risk Management
         url: /wiki/project-management/risk-management/
+      - title: This is an Example
+        url: /wiki/project-management/this-is-an-example/
   - title: Common Platforms
     url: /wiki/common-platforms/
     children:
@@ -187,7 +189,7 @@ docs:
       - title: Introduction
         url: /docs/
 
-# Main links appear in the header. 
+# Main links appear in the header.
 main:
   - title: Home
     url: /
