--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url                      : http://roboticsknowledgebase.com # the base hostname 
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "roboticsknowledgebase/roboticsknowledgebase.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-breadcrumbs              : true #false (default)
+breadcrumbs              : false #false (default)
 words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
