--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -153,6 +153,8 @@ wiki:
         url: /wiki/fabrication/makerbot-replicator-2x/
       - title: CubePro
         url: /wiki/fabrication/cube-pro/
+      - title: Series A Pro Printer
+        url: /wiki/fabrication/series-A-pro.md
   - title: Math
   - title: Tools
     url: /wiki/tools/
