--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -154,7 +154,7 @@ wiki:
       - title: CubePro
         url: /wiki/fabrication/cube-pro/
       - title: Series A Pro Printer
-        url: /wiki/fabrication/series-A-pro.md
+        url: /wiki/fabrication/series-A-pro/
   - title: Math
   - title: Tools
     url: /wiki/tools/
