Remove contribute page, fix typo

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,6 @@ wiki:
         url: /about/
       - title: Wiki Index
         url: /wiki/
-      - title: Contribute
-        url: /docs/
   - title: System Design & Development
     url: /wiki/system-design-development/
     children:
@@ -126,7 +124,7 @@ wiki:
   - title: Computing
     url: /wiki/computing/
     children:
-      - title: Adruino
+      - title: Arduino
         url: /wiki/computing/arduino/
       - title: Single Board Computers
         url: /wiki/computing/single-board-computers/
@@ -178,8 +176,6 @@ main:
     url: /wiki/
   - title: About
     url: /about/
-  - title: Contribute
-    url: /docs/
 
 # Navigation for supporting documentation.
 docs:
@@ -191,9 +187,3 @@ docs:
         url: /about/
       - title: Wiki Index
         url: /wiki/
-      - title: Contribute
-        url: /docs/
-  - title: Contribute
-    children:
-      - title: Introduction
-        url: /docs/
