Adding the camera-imu calibration url

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,6 +62,8 @@ wiki:
         url: /wiki/sensing/speech-recognition/
       - title: Stereo Vision in OpenCV
         url: /wiki/sensing/opencv-stereo/
+      - title: Camera-IMU Calibration using kalibr
+        url: /wiki/sensing/camera-imu-calibration/
   - title: Actuation
     url: /wiki/actuation/
     children:
