--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -171,6 +171,8 @@ wiki:
   - title: Tools
     url: /wiki/tools/
     children:
+      - title: Docker
+        url: /wiki/tools/docker/
       - title: Vim
         url: /wiki/tools/vim/
       - title: Altium Circuitmaker
