--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -147,7 +147,7 @@ wiki:
   - title: Fabrication
     url: /wiki/fabrication/
     children:
-      - title: 3D Printing Fabrication Consideration
+      - title: Fabrication Considerations for 3D printing
         url: /wiki/fabrication/fabrication_considerations_for_3D_printing/
       - title: Machining & Prototyping
         url: /wiki/fabrication/machining-prototyping/
