--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -81,6 +81,8 @@ wiki:
         url: /wiki/actuation/uln2003a-motor-controller/
       - title: Vedder Electronic Speed Controller
         url: /wiki/actuation/vedder-electronic-speed-controller/
+      - title: Controlling UR5 arm with ROS
+        url: /wiki/actuation/ur5e-control/
   - title: State Estimation
     url: /wiki/state-estimation/
     children:
