--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -172,6 +172,11 @@ wiki:
       - title: Series A Pro Printer
         url: /wiki/fabrication/series-A-pro/
   - title: Math
+  - title: Simulation
+    url: /wiki/simulation
+    children:
+      - title: Webots
+        url: /wiki/simulation/webots
   - title: Tools
     url: /wiki/tools/
     children:
