--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -172,6 +172,8 @@ wiki:
       - title: Series A Pro Printer
         url: /wiki/fabrication/series-A-pro/
   - title: Math
+      - title: Gaussian Process and Gaussian Mixture Model
+        url: /wiki/math/gaussian-process-gaussian-mixture-model/
   - title: Tools
     url: /wiki/tools/
     children:
