--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -201,6 +201,10 @@ wiki:
         url: /wiki/tools/visualization-simulation/
       - title: CLion IDE
         url: /wiki/tools/clion/
+      - title: Stream Rviz Visualizations as Images
+        url: /wiki/tools/stream-rviz/
+      - title: Web-Based Visualization using ROS JavaScript Library
+        url: /wiki/tools/roslibjs/
 
 # Main links appear in the header.
 main:
