--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,6 +33,8 @@ wiki:
   - title: Common Platforms
     url: /wiki/common-platforms/
     children:
+      - title: DJI Breakdown for Technical Projects
+        url: /wiki/common-platforms/dji-drone-breakdown-for-technical-projects/
       - title: DJI SDK
         url: /wiki/common-platforms/dji-sdk/
       - title: Pixhawk
