Team D Submission for Spring 2020 : CARLA Tutorials, Simulation System Design Considerations (#71)
* Starting documentation

* Rename Programming Agents and Environments in CARLA to Programming Agents and Environments in CARLA.md

* Update Programming Agents and Environments in CARLA.md

* Design Considerations initial commit

* Partial Design Considerations post

* Final commit on design considerations

* Added post to simple simulator

* Update Programming Agents and Environments in CARLA.md

* Add files via upload

* Add files via upload

* Update Programming Agents and Environments in CARLA.md

* Add files via upload

* Update Programming Agents and Environments in CARLA.md

* Add files via upload

* Update Programming Agents and Environments in CARLA.md

* Update and rename Programming Agents and Environments in CARLA.md to Spawning and Controlling Vehicles in CARLA.md

* Rename Spawning and Controlling Vehicles in CARLA.md to Spawning-and-Controlling-Vehicles-in-CARLA.md

* Rename Design considerations for ROS architectures.md to Design-considerations-for-ROS-architectures.md

* Update Building a Light-Weight Custom Simulator.md

* Rename Building a Light-Weight Custom Simulator.md to Building-a-Light-Weight-Custom-Simulator.md

* Update navigation.yml

* Update Design-considerations-for-ROS-architectures.md

Co-authored-by: askarthikkumar <askarthikkumar@gmail.com>
Co-authored-by: hzd11111 <alvin121212@live.cn>
Co-authored-by: pandyarohan <rohanpandya1992@gmail.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -138,6 +138,15 @@ wiki:
         url: /wiki/networking/ros-distributed/
       - title: Setting up WiFi hotspot at the boot up for Linux devices 
         url: /wiki/networking/wifi-hotspot/
+  - title: Simulation
+    url: /wiki/simulation/
+    children:
+      - title: Building a Light Weight Custom Simulator
+        url: /wiki/simulation/Building-a-Light-Weight-Custom-Simulator/
+      - title: Design considerations for ROS architectures
+        url: /wiki/simulation/Design-considerations-for-ROS-architectures
+      - title: Spawning and Controlling Vehicles in CARLA
+        url: /wiki/simulation/Spawning-and-Controlling-Vehicles-in-CARLA      
   - title: Interfacing
     url: /wiki/interfacing/
     children:
