--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -42,13 +42,21 @@ wiki:
       - title: Pixhawk
         url: /wiki/common-platforms/pixhawk/
       - title: ROS Introduction
-        url: /wiki/common-platforms/ros-intro/
+        url: /wiki/common-platforms/ros/ros-intro/
       - title: Asctec Pelican UAV Setup Guide
         url: /wiki/common-platforms/asctec-uav-setup-guide/
       - title: Husky Interfacing Procedure
         url: /wiki/common-platforms/husky_interfacing_and_communication/
       - title: ROS Motion Server Framework
-        url: /wiki/common-platforms/ros-motion-server-framework/
+        url: /wiki/common-platforms/ros/ros-motion-server-framework/
+      - title: ROS Cost Maps
+        url: /wiki/common-platforms/ros/ros-cost-maps/
+      - title: ROS Mapping and Localization
+        url: /wiki/common-platforms/ros/ros-mapping-localization/
+      - title: ROS Navigation
+        url: /wiki/common-platforms/ros/ros-navigation/
+      - title: ROS Global Planner
+        url: /wiki/common-platforms/ros/ros-global-planner/
   - title: Sensing
     url: /wiki/sensing/
     children:
@@ -94,12 +102,6 @@ wiki:
         url: /wiki/state-estimation/adaptive-monte-carlo-localization/
       - title: Sensor Fusion and Tracking
         url: /wiki/state-estimation/radar-camera-sensor-fusion/
-      - title: ROS Cost Maps
-        url: /wiki/state-estimation/ros-cost-maps/
-      - title: ROS Mapping and Localization
-        url: /wiki/state-estimation/ros-mapping-localization/
-      - title: ROS Navigation
-        url: /wiki/state-estimation/ros-navigation/
       - title: SBPL Lattice Planner
         url: /wiki/state-estimation/sbpl-lattice-planner/
       - title: ORB SLAM2 Setup Guidance
