--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -93,8 +93,13 @@ wiki:
         url: /wiki/actuation/uln2003a-motor-controller/
       - title: Vedder Electronic Speed Controller
         url: /wiki/actuation/vedder-electronic-speed-controller/
-      - title: Controlling UR5 arm with ROS
+        - title: Controlling UR5 arm with ROS
         url: /wiki/actuation/ur5e-control/
+  - title: Machine Learning
+    url: /wiki/deep-learning/custom-semantic-data
+    children:
+      - title: Custom data-set for segmentation
+        url: /wiki/actuation/motor-controller-feedback/
   - title: State Estimation
     url: /wiki/state-estimation/
     children:
