--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -48,7 +48,7 @@ wiki:
       - title: Husky Interfacing Procedure
         url: /wiki/common-platforms/husky_interfacing_and_communication/
       - title: ROS Motion Server Framework
-        url: /wiki/common-platforms/ros/ros-motion-server-framework/
+        url: /wiki/common-platforms/ros-motion-server-framework/
       - title: ROS Cost Maps
         url: /wiki/common-platforms/ros/ros-cost-maps/
       - title: ROS Mapping and Localization
@@ -231,6 +231,8 @@ wiki:
         url: /wiki/tools/stream-rviz/
       - title: Web-Based Visualization using ROS JavaScript Library
         url: /wiki/tools/roslibjs/
+      - title: Gazebo Simulation
+      	url: /wiki/common-platforms/gazebo-simulation/
   - title: Planning
     url: /wiki/planning/
     children:
