Repair Drone Permissions Link (#76)
* Create drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Update drone-flight-permissions.md

* Added Drone Flight Permissions

* Fixed Drone Permissions Link

* Change url system design to project management

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,6 +28,8 @@ wiki:
   - title: Project Management
     url: /wiki/project-management/
     children:
+      - title: Drone Flight Permissions
+        url: /wiki/project-management/drone-flight-permissions/
       - title: Product Development in Complex Systems
         url: /wiki/project-management/product-development-complex-systems/
       - title: Risk Management
