Team A Wiki Entry (#74)
* Create registration-techniques.md

* Update navigation.yml

* Update registration-techniques.md

* Update registration-techniques.md

* Update registration-techniques.md

* Update registration-techniques.md

Co-authored-by: Sean Bryan <smbryan.ad@gmail.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -211,6 +211,8 @@ wiki:
     children:
       - title: Gaussian Process and Gaussian Mixture Model
         url: /wiki/math/gaussian-process-gaussian-mixture-model/
+      - title: Registration Techniques in Robotics
+        url: /wiki/math/registration-techniques/
   - title: Tools
     url: /wiki/tools/
     children:
